# divera-reports

./: .gitignore  Cargo.toml  README.md  flake.nix  module.nix
.direnv/: flake-profile-3-link
src/: cli.rs  config.rs  main.rs
src/divera/: mod.rs  schema.rs
src/reports/: absent.rs  fire_operation.rs  mod.rs  roster.rs  station.rs
