[package]
name = "divera-reports"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["cargo", "derive"] }
serde = { version = "1.0.209", features = ["derive"] }
toml = "0.8.19"

[build-dependencies]
clap = { version = "4.5.17", features = ["cargo", "derive"] }
clap-markdown = "0.1.4"
