[package]
name = "divera-reports"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.17", features = ["cargo", "derive"] }
reqwest = { version = "0.12.7", features = ["rustls-tls", "json", "blocking"],  default-features = false}
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"

[build-dependencies]
clap = { version = "4.5.17", features = ["cargo", "derive"] }
clap-markdown = "0.1.4"
