[package]
name = "divera-reports"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
clap = { version = "4.5.17", features = ["cargo", "derive"] }
comfy-table = "7.1.1"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["rustls-tls", "json", "blocking"],  default-features = false}
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"

[build-dependencies]
clap = { version = "4.5.17", features = ["cargo", "derive"] }
clap-markdown = "0.1.4"
